Fix sidebar at top on small screens

--- a/app/_less/main.less
+++ b/app/_less/main.less
@@ -13,6 +13,7 @@
 
 // Sidebar
 @sidebar-width: 380px;  // consider reducing by 20px or so if site name changes
+@sidebar-height: 2.5*@font-size-h1;
 
 // Content
 @content-width:   560px;
